# PatientDataBridge

./: .Dockerfile  .env-example  .gitignore  .pytest.ini  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.infra/: prometheus.yaml
api/: tasks.py
api/views/: entry.py
config/: celery.py  settings.py  urls.py
tests/: custom_settings.py
tests/end_to_end/: test_api_behaviour.py
tests/integration/: test_task.py
