[tool.poetry]
name = "patient-data-bridge"
version = "0.1.0"
description = ""
authors = ["Felix <mhfelix31@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
Django = "=5.1.1"
django-ninja = "=1.3.0"
django-prometheus = "=2.3.1"
python-dotenv = "=1.0.1"
ipython = "=8.27.0"
pandas = "=2.2.2"
httpx = "=0.27.2"
celery = "=5.4.0"
redis = "=5.0.8"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
pytest = "=8.3.2"
pytest-django = "=4.9.0"
pytest-asyncio = "=0.24.0"
testcontainers = "=4.8.1"
pytest-coverage = "^0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
